Add XSD schema to validate XML, add Newtonsoft DLL to support Access API DLL, and correct casing to output booleans in lower case.

--- a/Crownpeak Content Xcelerator Migrator/Crownpeak Content Xcelerator Migrator.csproj
+++ b/Crownpeak Content Xcelerator Migrator/Crownpeak Content Xcelerator Migrator.csproj
@@ -34,6 +34,10 @@
     <Reference Include="AccessApiHelper">
       <HintPath>..\3rdPartyDll\AccessApiHelper.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\3rdPartyDll\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -59,6 +63,11 @@
     <Compile Include="MigrationSessionBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublishingProperties.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content-Xcelerator.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
