--- a/Crownpeak Content Xcelerator Migrator UI/Crownpeak Content Xcelerator Migrator UI.csproj
+++ b/Crownpeak Content Xcelerator Migrator UI/Crownpeak Content Xcelerator Migrator UI.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncLock.cs" />
     <Compile Include="CmsWrapper.cs" />
     <Compile Include="ComboItem.cs" />
     <Compile Include="Common.cs" />
